@@ -54,19 +54,37 @@
 #endif
 
 #ifndef CONFIG_EXAMPLES_NX_VPLANE
-#  define CONFIG_EXAMPLES_NX_VPLANE 0
+#    define CONFIG_EXAMPLES_NX_VPLANE 0
 #endif
 
 #ifndef CONFIG_EXAMPLES_NX_BGCOLOR
-#  define CONFIG_EXAMPLES_NX_BGCOLOR ' '
+#  if CONFIG_SIM_FBBPP == 24 || CONFIG_SIM_FBBPP == 32
+#    define CONFIG_EXAMPLES_NX_BGCOLOR 0x00602020
+#  elif CONFIG_SIM_FBBPP = 16
+#    define CONFIG_EXAMPLES_NX_BGCOLOR 0x3088
+#  else
+#    define CONFIG_EXAMPLES_NX_BGCOLOR ' '
+# endif
 #endif
 
 #ifndef CONFIG_EXAMPLES_NX_COLOR1
-#  define CONFIG_EXAMPLES_NX_COLOR1 '1'
+#  if CONFIG_SIM_FBBPP == 24 || CONFIG_SIM_FBBPP == 32
+#    define CONFIG_EXAMPLES_NX_COLOR1 0x00606020
+#  elif CONFIG_SIM_FBBPP = 16
+#    define CONFIG_EXAMPLES_NX_COLOR1 0x30c8
+#  else
+#    define CONFIG_EXAMPLES_NX_COLOR1 '1'
+# endif
 #endif
 
 #ifndef CONFIG_EXAMPLES_NX_COLOR2
-#  define CONFIG_EXAMPLES_NX_COLOR2 '2'
+#  if CONFIG_SIM_FBBPP == 24 || CONFIG_SIM_FBBPP == 32
+#    define CONFIG_EXAMPLES_NX_COLOR2 0x00606060
+#  elif CONFIG_SIM_FBBPP = 16
+#    define CONFIG_EXAMPLES_NX_COLOR2 0x30cc
+#  else
+#    define CONFIG_EXAMPLES_NX_COLOR2 '2'
+# endif
 #endif
 
 #ifdef CONFIG_NX_MULTIUSER
